style.css
/*
Theme Name: WWNTBM
Theme URI: http://wordpress.org/extend/themes/twentyeleven
Author: AndrewRMinion Design
Author URI: http://andrewrminion.com
Description: Based on TwentyEleven by the Wordpress Team
Version: 1.0.3
License: GNU General Public License
License URI: license.txt
Template:       twentyeleven
Tags: dark, light, white, black, gray, one-column, two-columns, left-sidebar, right-sidebar, fixed-width, flexible-width, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-image-header, featured-images, full-width-template, microformats, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready
*/

/* @group reset */

/* =Reset default browser CSS. Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
-------------------------------------------------------------- */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
    border: 0;
    font-family: inherit;
    font-style: inherit;
    font-weight: inherit;
    margin: 0;
    outline: 0;
    padding: 0;
    vertical-align: baseline;
}

:focus {

/* remember to define focus styles! */
    outline: 0;
}

body {
    background: #fff;
    line-height: 1;
}

ol, ul {
    list-style: none;
}

table {

/* tables still need 'cellspacing="0"' in the markup */
    border-collapse: separate;
    border-spacing: 0;
}

caption, th, td {
    font-weight: normal;
    text-align: left;
}

blockquote:before, blockquote:after,
q:before, q:after {
    content: "";
}

blockquote, q {
    quotes: "" "";
}

a img {
    border: 0;
}

article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}

/* @end */

/* @group structure */

/* =Structure
----------------------------------------------- */

body {
    padding: 0 2em;
    font-size: 18px;
}

#page {
    margin: 25px auto;
    max-width: 1000px;
}

#branding hgroup {
    margin: 0 7.6%;
}

#access div {
    box-sizing: border-box;
}

#primary {
    float: left;
    margin: 0 -26.4% 0 0;
    width: 100%;
}

#content {
    margin: 0 34% 0 7.6%;
    width: 58.4%;
}

#secondary {
    float: right;
    margin-right: 7.6%;
    width: 18.8%;
}

/* @group singular */

/* Singular */

.singular #primary {
    margin: 0 -26.4% 0 0;
}

.singular #content,
.left-sidebar.singular #content {
    margin: 0 34% 0 7.6%;
    position: relative;
    width: auto;
}

.singular .entry-header,
.singular .entry-content,
.singular footer.entry-meta,
.singular #comments-title {
    margin: 0 auto;
    width: 100%;
}

/* @end */

/* @group attachments */

/* Attachments */

.singular .image-attachment .entry-content {
    margin: 0 auto;
    width: auto;
}

.singular .image-attachment .entry-description {
    margin: 0 auto;
    width: 68.9%;
}

/* @end */

/* @group showcase */

/* Showcase */

.page-template-showcase-php #primary,
.left-sidebar.page-template-showcase-php #primary {
    margin: 0;
}

.page-template-showcase-php #content,
.left-sidebar.page-template-showcase-php #content {
    margin: 0 7.6%;
    width: auto;
}

.page-template-showcase-php section.recent-posts {
    float: right;
    margin: 0 0 0 31%;
    width: 69%;
}

.page-template-showcase-php #main .widget-area {
    float: left;
    margin: 0 -22.15% 0 0;
    width: 22.15%;
}

/* @end */

/* @group error404 */

/* error404 */

.error404 #primary {
    float: none;
    margin: 0;
}

.error404 #primary #content {
    margin: 0 7.6%;
    width: auto;
}

/* @end */

/* @group alignment */

/* Alignment */

.alignleft {
    display: inline;
    float: left;
    margin-right: 1.625em;
}

.alignright {
    display: inline;
    float: right;
    margin-left: 1.625em;
}

.aligncenter {
    clear: both;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/* @end */

/* @group right content */

/* Right Content */

.left-sidebar #primary {
    float: right;
    margin: 0 0 0 -26.4%;
    width: 100%;
}

.left-sidebar #content {
    margin: 0 7.6% 0 34%;
    width: 58.4%;
}

.left-sidebar #secondary {
    float: left;
    margin-left: 7.6%;
    margin-right: 0;
    width: 18.8%;
}

/* @end */

/* @group one column */

/* One column */

.one-column #page {
    max-width: 690px;
}

.one-column #content {
    margin: 0 7.6%;
    width: auto;
}

.one-column #nav-below {
    border-bottom: 1px solid #ddd;
    margin-bottom: 1.625em;
}

.one-column #secondary {
    float: none;
    margin: 0 7.6%;
    width: auto;
}

/* @end */

/* @group simplify showcase template */

/* Simplify the showcase template */

.one-column .page-template-showcase-php section.recent-posts {
    float: none;
    margin: 0;
    width: 100%;
}

.one-column .page-template-showcase-php #main .widget-area {
    float: none;
    margin: 0;
    width: auto;
}

.one-column .page-template-showcase-php .other-recent-posts {
    border-bottom: 1px solid #ddd;
}

/* @end */

/* @group simplify showcase template when small */

/* Simplify the showcase template when small feature */

.one-column section.featured-post .attachment-small-feature {
    border: none;
    display: block;
    height: auto;
    max-width: 60%;
    position: static;
}

.one-column article.feature-image.small {
    margin: 0 0 1.625em;
    padding: 0;
}

.one-column article.feature-image.small .entry-title {
    font-size: 20px;
    line-height: 1.3em;
}

.one-column article.feature-image.small .entry-summary {
    height: 150px;
    overflow: hidden;
    padding: 0;
    text-overflow: ellipsis;
}

.one-column article.feature-image.small .entry-summary a {
    left: -9%;
}
/* ... */

